# ecotracer-analystics

./: .\cVariableMetadata_log.txt  .gitignore  404.html  README.md  analytical_r_formulation.html  api.html  ecotracer_matrix_formulation.md  index.html  mkdocs.yml  parameter_analysis.html  pyproject.toml
.github/workflows/: deploy_docs.yml
docs/: analytical_r_formulation.md  api.md  index.md  parameter_analysis.md
notebooks/: 01_linear_system_basics.ipynb  02_reverse_parameter_estimation.ipynb  03_nested_sampling_missing_data.ipynb
search/: search_index.json
src/ecotracer_analytics/: __init__.py  core.py  dynamics.py  linear_system.py  reverse_analysis.py
tests/: check_stability.py  test_dynamics.py  verify_implementation.py
